--- a/client/public/offline.html
+++ b/client/public/offline.html
@@ -10,15 +10,19 @@
         padding: 0;
       }
       html {
-        background: #191919 -webkit-linear-gradient(top, #000 0%, #191919 100%) no-repeat;
-        background: #191919 linear-gradient(to bottom, #000 0%, #191919 100%)
+        background: #4cbace -webkit-linear-gradient(
+            top,
+            #4cbace 0%,
+            #4cbace 100%
+          ) no-repeat;
+        background: #4cbace linear-gradient(to bottom, #4cbace 0%, #4cbace 100%)
           no-repeat;
       }
       body {
         font-family: sans-serif;
         color: #fff;
         text-align: center;
-        font-size: 150%;
+        font-size: 100%;
       }
       h1,
       h2 {
@@ -28,19 +32,18 @@
         margin: 0 auto;
         padding: 0.15em;
         font-size: 10em;
-        text-shadow: 0 2px 2px #000;
+        text-shadow: 0 2px 2px #4cbace;
       }
-      h2 {
+      h4 {
         margin-bottom: 2em;
       }
     </style>
   </head>
   <body>
     <h1>⚠</h1>
-    <h2>No connection to the internet</h2>
+    <h2>No Connection ..</h2>
     <p class="desc">
-      The connection to the outside world is needed for updates and keeping the
-      time.
+      Please check Internet connection
     </p>
   </body>
 </html>
