--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="./images/logo1.ico" />
+    <link rel="icon" type="image/png" href="./logo1.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Modern PWA to buy list React Application"
     />
-    <link rel="apple-touch-icon" href="./images/logo1.ico" />
+    <link rel="apple-touch-icon" href="./logo1.ico" />
     <link rel="manifest" href="./manifest.json" />
     <title>ToBuyList App</title>
   </head>
